# findar

./: .dockerignore  .env.example  .example.secrets.toml  .gitignore  .pre-commit-config.yaml  .prettierrc.yml  .secrets.toml  .yamllint.yml  Dockerfile  LICENSE  README.md  check_celery.py  docker-compose.yml  justfile  pyproject.toml  ruff.toml  test.py  typos.toml
.github/: typos.toml
.github/workflows/: prettier.yml  ruff.yml  typos.yml  yamllint.yml
alembic/: env.py
alembic/versions/: 13f6cc891629_add_values_to_configs.py  2b7e3c8a9f4d_add_ml_models_table.py  5443b6bc781d_added_new_fields_to_transactions.py  8577a9d53b61_created_queue_tasks.py  a0149c5e906d_created_user_model.py  d2450047169b_change_telegram_id_to_bigint.py  d862d88bf3aa_notifications_update.py  f714ee4c1bae_add_target_field.py  fd54c0552b1c_init_migration.py
config/: .env.example
docker/: .env.example  grafana.ini.template  loki-config.yaml  loki-config.yml  loki.yml  loki.yml.template  postgresql.conf  prometheus.yml  prometheus.yml.template  promtail-config.yaml  promtail.yml.template  redis.conf
docker/confs/nginx/: api.conf.template  frontend.conf.template  metrics.conf.template
docker/scripts/: envsubst.py  envsubst.sh
monitoring/grafana/dashboards/: system-overview.json
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: container_alerts.yml  node_alerts.yml
scripts/: envsubst.sh  test.py
src/: __init__.py  config.py
src/api/: __init__.py  __main__.py  app.py
src/api/routes/: __init__.py  transactions.py
src/bot/: __init__.py  __main__.py  app.py  handlers.py
src/core/: __init__.py  exceptions.py  logging.py
src/modules/: __init__.py
src/modules/ml/: metrics.py  repository.py  routes.py  schemas.py  service.py
src/modules/notifications/: __init__.py  enums.py  models.py  repository.py  routes.py  (+2 more)
src/storage/: __init__.py  dependencies.py  enums.py  models.py
src/workers/: __init__.py  tasks.py
(+159 files in other folders)
