[project]
name = "findar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "celery>=5.4.0",
    "dynaconf>=3.2.12",
    "fastapi[standard]>=0.119.0",
    "greenlet>=3.2.4",
    "loguru>=0.7.3",
    "prometheus-client>=0.21.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "ruff>=0.14.1",
    "sqlmodel>=0.0.27",
]
