[project]
name = "findar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.5.2",
    "dynaconf>=3.2.12",
    "fastapi[standard]>=0.119.0",
    "flower>=2.0.1",
    "greenlet>=3.2.4",
    "loguru>=0.7.3",
    "prometheus-client>=0.21.0",
    "prometheus-client>=0.21.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "redis>=5.2.1",
    "ruff>=0.14.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "sqlmodel>=0.0.27",
    "kombu>=5.5.3",
]
